# openhab_scripts

./: .gitignore  README.md  loxone_ga_updater.py  pyproject.toml
loxone/: items_metadata.py  loxone_ga_updater.py
tests/: test_openhab_scripts.py
